## CHANGELOG

Here is the list of the changes and features provided by the Rainbow-CLI

All notable changes to Rainbow-CLI will be documented in this file.

### [0.8.0] - 2017-08-15
---

#### Added
---
* Filter companies by name (command: rainbow companies --name "...")
* Filter users by name (command: rainbow users --name "...")

#### Changed
---
* Order list of users by display name (firstname lastname)


### v0.7.5

 - [PHONES] List the phones number of a system

 - [PHONES] Retrieve information about a phone 

### v0.6.2

 - [SYSTEM] List the systems

 - [SYSTEM] Retrieve information about a system 

 - [SYSTEM] Create a new system associated to a site

 - [SYSTEM] Delete a system

 - [SYSTEM] Link/unlink a system to/from a site

### v0.5.7

 - [SITE] List the sites

 - [SITE] Retrieve information about a site

 - [SITE] Create a new site associated to a company

 - [SITE] Delete a site

 - [USER] Retrieve information about a user

 - [ACCOUNT] Sign-out from Rainbow

### v0.4.4

 - [COMPANY] Link/unlink a company to/from an organization 

 - [ORGANIZATION] Retrieve information about an organization

 - [ORGANIZATION] Create a new organization

 - [ORGANIZATION] Delete an organization

 - [ORGANIZATION] List the organizations 

### v0.3.11

 - [USER] Create a new user

 - [USER] Delete a user

 - [USER] List of users

 - [MASS PRO] Import CSV file of users

 - [MASS PRO] Export users to CSV file

 - [COMPANY] Remove all users from a company

### v0.2.7

 - [SERVICEABILITY] Get the status of the API

 - [COMPANY] Retrieve information about a company

 - [COMPANY] Delete a company

 - [COMPANY] Create a new company

 - [COMPANY] List the companies

### v0.1.0

 - [ACCOUNT] Retrieve the information about the connected user

 - [ACCOUNT] Sign-in to Rainbow