@@ -50,14 +50,16 @@ class CUser {
                 filterToApply += "&displayName=" + options.name;
             }
 
+            if(options.company) {
+                filterToApply += "&companyName=" + options.company;
+            }
+
             if(options.onlyTerminated) {
                 filterToApply += "&isTerminated=true";
             }
             else {
                 filterToApply += "&isTerminated=false";
             }
-
-            console.log("FILTER", filterToApply);
 
             NodeSDK.get('/api/rainbow/admin/v1.0/users?' + filterToApply, token).then(function(json) {
                 resolve(json);
@@ -248,7 +250,13 @@ class CUser {
 
                     var users = json.data;
 
+                    var companyId = "";
+
                     for(var i = 0; i < users.length; i++) {
+
+                        if(options.company || options.companyId) {
+                            companyId = users[i].companyId;
+                        }
 
                         var accountType = users[i].accountType;
                         if(accountType === "free") {
@@ -284,7 +292,13 @@ class CUser {
                     var t = table(array);
                     Screen.table(t);
                     Screen.print('');
-                    Screen.success(json.total + ' users found.');
+                    if(options.company) {
+                        Screen.success(json.total + ' users found in company ' + options.company);
+                    } else if(options.companyId) {
+                        Screen.success(json.total + ' users found in company ' + options.companyId);
+                    } else {
+                        Screen.success(json.total + ' users found');
+                    }
                 }
 
             }).catch(function(err) {
@@ -373,15 +387,17 @@ class CUser {
         }
     }
 
-    getUser(id) {
+    getUser(id, options) {
         var that = this;
 
-        Message.welcome();
+        Message.welcome(options);
             
         if(this._prefs.token && this._prefs.user) {
-            Message.loggedin(this._prefs.user);
-        
-            Screen.print("Request informaton for user".white + " '".yellow + id.yellow + "'".yellow);
+            if(!options.noOutput) {
+                Message.loggedin(this._prefs.user, options);
+                Screen.print("Request informaton for user".white + " '".yellow + id.yellow + "'".yellow);
+            }
+            
             var status = new Spinner('In progress, please wait...');
             status.start();
             NodeSDK.start(this._prefs.account.email, this._prefs.account.password, this._prefs.rainbow).then(function() {
@@ -389,57 +405,66 @@ class CUser {
             }).then(function(json) {
 
                 status.stop();
-                Screen.print('');
 
-                var array = [];
-                array.push([ "#".gray, "Attribute".gray, "Value".gray]);
-                array.push([ "-".gray, "---------".gray, "-----".gray]);  
-                var index = 1;
-                for (var key in json.data) {
-                    var data = json.data[key];
-                    if(data === null) {
-                        array.push([ index.toString().white, key.toString().cyan, 'null'.white ]);  
-                    } 
-                    else if(typeof data === "string" && data.length === 0) {
-                        array.push([  index.toString().white, key.toString().cyan, "''".white ]);  
-                    }
-                    else if(Tools.isArray(data) && data.length === 0) {
-                        array.push([  index.toString().white, key.toString().cyan, "[ ]".white ]);  
-                    }
-                    else if((Tools.isArray(data)) && data.length === 1) {
-                        array.push([  index.toString().white, key.toString().cyan, "[ ".white + JSON.stringify(data[0]).white + " ]".white]);  
-                    }
-                    else if((Tools.isArray(data)) && data.length > 1) {
-                        var item = ""
-                        for (var i=0; i < data.length; i++) {
-                            if(typeof data[i] === "string") {
-                                item +=  JSON.stringify(data[i]).white;
-                                if(i < data.length -1) {
-                                    item += ","
-                                }
-                            }
-                            else {
-                                item += "[ " + JSON.stringify(data[i]).white + " ]";
-                                if(i < data.length -1) {
-                                    item += ","
-                                }
-                            }
+                if(options.outputToJSON) {
+                    var out = new Buffer.from(JSON.stringify(json.data))
+                    process.stdout.write(out);
+                    Screen.print('');
+                    Screen.print('');
+                }
+                else {
+                    Screen.print('');
+                    var array = [];
+                    array.push([ "#".gray, "Attribute".gray, "Value".gray]);
+                    array.push([ "-".gray, "---------".gray, "-----".gray]);  
+                    var index = 1;
+                    for (var key in json.data) {
+                        var data = json.data[key];
+                        if(data === null) {
+                            array.push([ index.toString().white, key.toString().cyan, 'null'.white ]);  
+                        } 
+                        else if(typeof data === "string" && data.length === 0) {
+                            array.push([  index.toString().white, key.toString().cyan, "''".white ]);  
                         }
-                        array.push([  index.toString().white, key.toString().cyan, "[ ".white + item.white + " ]" ]);  
+                        else if(Tools.isArray(data) && data.length === 0) {
+                            array.push([  index.toString().white, key.toString().cyan, "[ ]".white ]);  
+                        }
+                        else if((Tools.isArray(data)) && data.length === 1) {
+                            array.push([  index.toString().white, key.toString().cyan, "[ ".white + JSON.stringify(data[0]).white + " ]".white]);  
+                        }
+                        else if((Tools.isArray(data)) && data.length > 1) {
+                            var item = ""
+                            for (var i=0; i < data.length; i++) {
+                                if(typeof data[i] === "string") {
+                                    item +=  JSON.stringify(data[i]).white;
+                                    if(i < data.length -1) {
+                                        item += ","
+                                    }
+                                }
+                                else {
+                                    item += "[ " + JSON.stringify(data[i]).white + " ]";
+                                    if(i < data.length -1) {
+                                        item += ","
+                                    }
+                                }
+                            }
+                            array.push([  index.toString().white, key.toString().cyan, "[ ".white + item.white + " ]" ]);  
+                        }
+                        else if(Tools.isObject(data)) {
+                            array.push([  index.toString().white, key.toString().cyan, JSON.stringify(data).white ]);  
+                        }
+                        else {
+                            array.push([  index.toString().white, key.toString().cyan, data.toString().white ]);
+                        }
+                        index+=1;
+
                     }
-                    else if(Tools.isObject(data)) {
-                        array.push([  index.toString().white, key.toString().cyan, JSON.stringify(data).white ]);  
-                    }
-                    else {
-                        array.push([  index.toString().white, key.toString().cyan, data.toString().white ]);
-                    }
-                    index+=1;
+                    var t = table(array);
+                    Screen.table(t);
+                    Screen.print('');
+                    Screen.success('User information retrieved successfully.');
                 }
 
-                var t = table(array);
-                Screen.table(t);
-                Screen.print('');
-                Screen.success('User information retrieved successfully.');
             }).catch(function(err) {
                 status.stop();
                 Message.error(err);
