@@ -22,8 +22,14 @@ class User {
 
         this._program.command('user', '<id>')
         .description("Retrieve information about an existing user")
-        .action(function (id) {
-            that._user.getUser(id);
+        .option('-o, --output', 'Write the JSON result to standard stdout')
+        .action(function (id, commands) {
+
+            var options= {
+                noOutput: commands.output || false
+            }
+
+            that._user.getUser(id, options);
         });
 
         this._program.command('create', '<username> <password> <firstname> <lastname>')
@@ -57,7 +63,8 @@ class User {
         .option('-p, --page <number>', 'Display a specific page')
         .option('-l, --limit <number>', 'Limit to a number of instances per page (max=1000)')
         .option('-t, --terminated', 'Filter to terminated users')
-        .option('-c, --company <id>', 'Filter to users from a company')
+        .option('--cid <id>', 'Filter to users from a company id')
+        .option('-c, --company <name>', 'Filter to users from a company with a given name')
         .option('-n, --name <name>', 'Filter to users with a given name (firstname lastname)')
         .option('-f, --file <filename>', 'Print result to a file in CSV')
         .action(function (commands) {
@@ -94,7 +101,8 @@ class User {
                 }
 
                 options = {
-                    companyId: commands.company || "",
+                    companyId: commands.cid || "",
+                    company: commands.company || null,
                     onlyTerminated: commands.terminated || false,
                     csv: commands.file || "",
                     format: format,
